--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "pg": "^7.18.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
